src/test/deca/syntax/invalid/homemade/test/test_pars_inv_if_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 13 : Erreur (oubli {expr}})
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 0;
    if (x < 5)
}
